@@ -5,6 +5,8 @@ This project uses Semantic Versioning (see http://semver.org/).
 
   - Fixed an RPC serialization bug when batching whole-row deletes.
     See issue #25.
+  - The Deferred returned by `flush()' now guarantees that buffered
+    atomic increments have also completed (#38).
   - Scanners can now scan multiple qualifiers at a time (#35).
   - Scanner and GetRequest now enable you to specify how many versions
     to read from HBase.
